--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,9 @@ body {
 	font-family: "Roboto", "sans-serif";
 	background-color: black;
 	margin: 0;
+	background-size: cover;
+	background-position: center;
+	background-repeat: no-repeat;
 }
 
 .container {
